user/example/module/src/CorryMonitor.cc
#include "eudaq/Monitor.hh"
#include "eudaq/StandardEvent.hh"
#include "eudaq/StdEventConverter.hh"
#include <iostream>
#include <fstream>
#include <ratio>
#include <chrono>
#include <thread>
#include <random>
#include <unistd.h>
#include <signal.h>
#include <wait.h>

//----------DOC-MARK-----BEG*DEC-----DOC-MARK----------
class CorryMonitor : public eudaq::Monitor {
public:
  CorryMonitor(const std::string & name, const std::string & runcontrol);
  void DoInitialise() override;
  void DoConfigure() override;
  void DoStartRun() override;
  void DoStopRun() override;
  void DoTerminate() override;
  void DoReset() override;
  void DoReceive(eudaq::EventSP ev) override;
  
  static const uint32_t m_id_factory = eudaq::cstr2hash("CorryMonitor");
  
private:
  bool m_en_print;
  bool m_en_std_converter;
  bool m_en_std_print;
  pid_t m_corry_pid;
  std::string m_corry_path;
  std::string m_corry_config;

};

namespace{
  auto dummy0 = eudaq::Factory<eudaq::Monitor>::
    Register<CorryMonitor, const std::string&, const std::string&>(CorryMonitor::m_id_factory);
}

CorryMonitor::CorryMonitor(const std::string & name, const std::string & runcontrol)
  :eudaq::Monitor(name, runcontrol){  
}

void CorryMonitor::DoInitialise(){
  auto ini = GetInitConfiguration();
  ini->Print(std::cout);
}

void CorryMonitor::DoConfigure(){
  auto conf = GetConfiguration();
  conf->Print(std::cout);
  m_en_print = conf->Get("Corry_ENABLE_PRINT", 1);
  m_en_std_converter = conf->Get("Corry_ENABLE_STD_CONVERTER", 0);
  m_en_std_print = conf->Get("Corry_ENABLE_STD_PRINT", 0);
  m_corry_path = conf->Get("CORRY_PATH", "~/corryvreckan/install/bin/corry");
  m_corry_config = conf->Get("CORRY_CONFIG_PATH", "placeholder.conf");
}

void CorryMonitor::DoStartRun(){
  m_corry_pid = fork();
  switch (m_corry_pid)
  {
  case -1: // error
    perror("fork");
    exit(1);

  case 0: // child
    execl(m_corry_path.c_str(), "corry", "-c", m_corry_config.c_str(), (char*)0);
    //execl("/home/andreas/corryvreckan/install/bin/corry", "corry", "-c", "/home/andreas/Documents/Monitoring/monitoring.conf", (char*)0);
    perror("execl"); // execl doesn't return unless there is a problem
    exit(1);
  
  default:
    break;
  }
  
}

void CorryMonitor::DoStopRun(){
  kill(m_corry_pid, SIGTERM);

  bool died = false;
  for (int loop=0; !died && loop < 5; ++loop)
  {
    int status;
    eudaq::mSleep(1000);
    if (waitpid(m_corry_pid, &status, WNOHANG) == m_corry_pid) died = true;
  }

  if (!died) kill(m_corry_pid, SIGKILL);
}

void CorryMonitor::DoReset(){
}

void CorryMonitor::DoTerminate(){
}

void CorryMonitor::DoReceive(eudaq::EventSP ev){
  if(m_en_print)
    ev->Print(std::cout);
  if(m_en_std_converter){
    auto stdev = std::dynamic_pointer_cast<eudaq::StandardEvent>(ev);
    if(!stdev){
      stdev = eudaq::StandardEvent::MakeShared();
      eudaq::StdEventConverter::Convert(ev, stdev, nullptr); //no conf
      if(m_en_std_print)
	stdev->Print(std::cout);
    }
  }
}
